Revise demo video details and image paths
Updated video description and changed iframe source.

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
     <!-- Demo -->
     <section class="card">
       <h2 style="margin-top:0">Demo video</h2>
-      <p class="small">5-minute walkthrough showing dashboard, forecasting, and real-time alerts.</p>
-      <iframe src="https://www.youtube.com/watch?v=tlNz26ZmPZE" title="my energy tracker demo" allowfullscreen></iframe>
+      <p class="small">5-minute video showing dashboard, forecasting, real-time alerts, and more.</p>
+      <iframe src="https://www.youtube.com/embed/tlNz26ZmPZE" title="EnergyIQ Demo" allowfullscreen></iframe>
     </section>
 
     <!-- Quick facts -->
@@ -58,11 +58,10 @@
     <section class="card">
       <h2 style="margin-top:0">Screenshots</h2>
       <div class="grid three" style="margin-top:12px">
-        <div><strong>Dashboard</strong><br><img src="dashboard.png" alt="EnergyIQ dashboard screenshot"></div>
-        <div><strong>Appliances</strong><br><img src="appliance.png" alt="Appliance management screenshot"></div>
-        <div><strong>Actual vs Forecast</strong><br><img src="insights.png" alt="Actual vs forecast screenshot"></div>
+        <div><strong>Dashboard</strong><br><img src="images/dashboard.png" alt="EnergyIQ dashboard screenshot"></div>
+        <div><strong>Appliances</strong><br><img src="images/appliance.png" alt="Appliance management screenshot"></div>
+        <div><strong>Actual vs Forecast</strong><br><img src="images/insights.png" alt="Actual vs forecast screenshot"></div>
       </div>
-      <p class="small" style="margin-top:8px">Add these image files to the same folder as this HTML before publishing.</p>
     </section>
 
     <!-- Forecasting summary -->
