--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
     <section class="card">
       <h2 style="margin-top:0">Screenshots</h2>
       <div class="grid three" style="margin-top:12px">
-        <div><strong>Dashboard</strong><br><img src="images/dashboard.png" alt="EnergyIQ dashboard screenshot"></div>
-        <div><strong>Appliances</strong><br><img src="images/appliance.png" alt="Appliance management screenshot"></div>
-        <div><strong>Actual vs Forecast</strong><br><img src="images/insights.png" alt="Actual vs forecast screenshot"></div>
+        <div><strong>Dashboard</strong><br><img src="dashboard.png" alt="EnergyIQ dashboard screenshot"></div>
+        <div><strong>Appliances</strong><br><img src="appliance.png" alt="Appliance management screenshot"></div>
+        <div><strong>Actual vs Forecast</strong><br><img src="insights.png" alt="Actual vs forecast screenshot"></div>
       </div>
     </section>
 
