--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                 <span class="metric-label">MAPE</span>
               </div>
             </div>
-            <p class="small" style="color:rgba(255,255,255,0.95);margin-top:8px">Note: metrics are labeled demonstration values. See README for methodology and backtest instructions.</p>
+            <p class="small" style="color:rgba(255,255,255,0.95);margin-top:8px">Note: metrics are labeled demonstration values. Methodology and backtest instructions are shown below.</p>
           </div>
         </div>
 
@@ -187,7 +187,6 @@
               <div class="screenshot-item"><strong>Appliances</strong><img src="appliance.png" alt="Appliance management screenshot" /></div>
               <div class="screenshot-item"><strong>Forecasting</strong><img src="insights.png" alt="Actual vs forecast screenshot" /></div>
             </div>
-            <p class="small" style="margin-top:12px">Images are expected next to this HTML file in the repo root. If you prefer an <code>/images</code> folder update the paths accordingly.</p>
           </div>
 
           <div class="card">
